--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.67",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-offline": "^2.2.6",
@@ -19,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.3.2"
   },
