added datastore and scripts to build env vars

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@google-cloud/datastore": "^5.0.1",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.67",
@@ -37,10 +38,11 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop",
+    "create-env": "node tools/env.js",
+    "build": "NODE_ENV=production npm run create-env && gatsby build",
+    "dev": "NODE_ENV=dev npm run create-env && gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "npm run serve",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
