--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/datastore": "^5.0.1",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "dance-magic": "github:maxrbaldwin/Dance-Magic-Shared",
     "gatsby": "^2.13.67",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -38,14 +39,13 @@
   ],
   "license": "MIT",
   "scripts": {
+    "create-env": "GOOGLE_APPLICATION_CREDENTIALS=./creds/dmc.json node tools/env.js",
     "build": "NODE_ENV=production npm run create-env && gatsby build",
     "dev": "NODE_ENV=dev npm run create-env && gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "NODE_ENV=production npm run serve",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "decrypt-env": "gcloud kms decrypt --key=secrets --keyring=env-web --plaintext-file=.env.development --ciphertext-file=env/.env.encrypted --location=us-east1",
-    "encrypt-env": "gcloud kms encrypt --key=secrets --keyring=env-web --plaintext-file=env/.env --ciphertext-file=env/.env.encrypted --location=us-east1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "repository": {
     "type": "git",
