point gatsby at bin

--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
   ],
   "license": "MIT",
   "scripts": {
-    "create-env": "GOOGLE_APPLICATION_CREDENTIALS=./creds/dmc.json node tools/env.js",
-    "build": "NODE_ENV=production npm run create-env && gatsby build",
-    "dev": "NODE_ENV=dev npm run create-env && gatsby develop",
+    "create-env": "node tools/env.js",
+    "create-env-dev": "GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS/dmc.json node tools/env.js",
+    "build": "NODE_ENV=production npm run create-env && ./node_modules/.bin/gatsby build",
+    "dev": "NODE_ENV=dev npm run create-env-dev && ./node_modules/.bin/gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "NODE_ENV=production npm run serve",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "serve": "./node_modules/.bin/gatsby serve"
   },
   "repository": {
     "type": "git",
