--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,11 @@
 service: default
 env: flex
 runtime: nodejs
+handlers:
+- url: /
+  static_files: www/public/index.html
+  upload: www/public/index.html
+
+- url: /(.*)
+  static_files: www/public/\1
+  upload: www/public/(.*)
