--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,5 @@ handlers:
   static_files: public/index.html
   upload: public/index.html
 
-- url: /(.*)
-  static_files: public/\1
-  upload: public/(.*)
+- url: /
+  static_dir: build
