--- a/config/cloudbuild.yaml
+++ b/config/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 # try and raise timeout
-- name: 'gcr.io/cloud-builder/gcloud'
+- name: 'gcr.io/cloud-builders/gcloud'
   args: ['config', 'set', 'app/cloud_build_timeout', 1200]
 # install
 - name: 'gcr.io/cloud-builders/npm:node-10.10.0'
