--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "babel-plugin-styled-components": "^1.10.6",
     "dance-magic": "git+https://0bf8c2dc1387a25c63ba20737d148ae1638f0682:x-oauth-basic@github.com/maxrbaldwin/Dance-Magic-Shared",
     "gatsby": "^2.13.67",
-    "gatsby-image": "^2.2.8",
+    "gatsby-image": "^2.2.38",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
