--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,8 @@
 service: default
 env: flex
 runtime: nodejs
+handlers:
+- url: /.*  
+  script: auto  
+  secure: always  
+  redirect_http_response_code: 301
