--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^2.13.67",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-htaccess": "^1.4.0",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.12",
