try standard env with handler for https

--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,8 @@
 service: default
-env: flex
+env: standard
 runtime: nodejs
+handlers:
+- url: /.*
+  secure: always
+  redirect_http_response_code: 301
+  script: auto
