--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.12",
+    "gatsby-plugin-sitemap": "^2.2.26",
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
