--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "dev": "NODE_ENV=dev npm run create-env && ./node_modules/.bin/gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "NODE_ENV=production npm run serve",
-    "serve": "./node_modules/.bin/gatsby serve --port $PORT --host 0.0.0.0"
+    "serve": "./node_modules/.bin/gatsby serve --port $PORT --host 0.0.0.0",
+    "test": "env"
   },
   "repository": {
     "type": "git",
