--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
   ],
   "scripts": {
     "create-env": "node tools/env.js",
-    "build": "NODE_ENV=production npm run create-env && ./node_modules/.bin/gatsby build",
-    "dev": "NODE_ENV=dev npm run create-env && ./node_modules/.bin/gatsby develop",
+    "build": "NODE_ENV=production npm run create-env && npx gatsby build",
+    "dev": "NODE_ENV=dev npm run create-env && npx gatsby develop",
+    "dev-windows": "set NODE_ENV=\"dev\" npm run create-env && npx gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "NODE_ENV=production npm run serve",
     "serve": "./node_modules/.bin/gatsby serve --port $PORT --host 0.0.0.0",
